--- a/compose/Dockerfile
+++ b/compose/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:18.04
 RUN apt update
-RUN apt install python3-pip
-COPY .requirements.txt /scripts/
+RUN echo 'y' | apt install python3-pip
+COPY requirements.txt /scripts/
 RUN pip3 install -r ./scripts/requirements.txt
 WORKDIR /src/
