--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,28 @@
-asyncio
-aiohttp
-aiohttp_jinja2
-jinja2
-uvloop
-argparse
-aioreloader
-pyyaml
+aiohttp==3.6.2
+aiohttp-jinja2==1.2.0
+aioreloader==0.2.2
+asn1crypto==0.24.0
+async-timeout==3.0.1
+asyncio==3.4.3
+asyncpg==0.20.0
+asyncpgsa==0.26.1
+attrs==19.3.0
+chardet==3.0.4
+cryptography==2.1.4
+idna==2.6
+idna-ssl==1.1.0
+Jinja2==2.10.3
+keyring==10.6.0
+keyrings.alt==3.0
+MarkupSafe==1.1.1
+multidict==4.7.2
+pycrypto==2.6.1
+pygobject==3.26.1
+pyxdg==0.25
+PyYAML==5.2
+SecretStorage==2.3.1
+six==1.11.0
+SQLAlchemy==1.3.12
+typing-extensions==3.7.4.1
+uvloop==0.14.0
+yarl==1.4.2
