--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - .:/src
     ports:
       - 8000:8000
+    depends_on:
+      - db
     command: ['sh', '-c', 'python3 main.py --host 0.0.0.0 --port 8000 --reload']
 
   db:
